dev: añadido manejo de errores
